updates Domain api
